--- a/docs/team/wish2023.md
+++ b/docs/team/wish2023.md
@@ -26,6 +26,8 @@ The code contributed by me can be found in this [link](https://nus-cs2113-ay2021
 * Implemented a `ForecastFilter` to enable user to filter tasks according to date.
 * Implemented a `FilterCalculator` and `DateChecker` to examine user errors.
 
+<div style="page-break-after: always;"></div>
+
 ### Documentation:
   * User Guide:
     * Documented the following features:
